tests/slurm-47947490.out
Lmod has detected the following error: These module(s) or extension(s) exist
but cannot be loaded as requested: "intel-oneapi-mpi/2021.10.0"

   You encountered this error for one of the following reasons:
   1. Missing version specification: On Pitzer, you must specify an available
version.
   2. Missing required modules: Ensure you have loaded the appropriate compiler
and MPI modules.

   Try: "module spider intel-oneapi-mpi/2021.10.0" to view available versions
or required modules.

   If you need further assistance, please contact oschelp@osc.edu with the
subject line "lmod error: intel-oneapi-mpi/2021.10.0"



+ PROJECT_ROOT=/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt
+ cd /users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt
+ export PYTHONPATH=/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt/src:
+ PYTHONPATH=/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt/src:
+ python -u -m grating_opt.main
[WARNING 06-01 20:49:16] ax.storage.sqa_store.with_db_settings_base: Ax currently requires a sqlalchemy version below 2.0. This will be addressed in a future release. Disabling SQL storage in Ax for now, if you would like to use SQL storage please install Ax with mysql extras via `pip install ax-platform[mysql]`.
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt/src/grating_opt/main.py", line 74, in <module>
    main(args)
  File "/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt/src/grating_opt/main.py", line 49, in main
    client, best_values, all_values = optimizer.optimize_params(
                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt/src/grating_opt/optimizer.py", line 104, in optimize_params
    from mpi4py.futures import MPIPoolExecutor
  File "/users/PAS1730/ziyaosu816/.local/lib/python3.12/site-packages/mpi4py/futures/__init__.py", line 19, in <module>
    from .pool import (
  File "/users/PAS1730/ziyaosu816/.local/lib/python3.12/site-packages/mpi4py/futures/pool.py", line 13, in <module>
    from . import _core
  File "/users/PAS1730/ziyaosu816/.local/lib/python3.12/site-packages/mpi4py/futures/_core.py", line 22, in <module>
    from .. import MPI
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1322, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 1262, in _find_spec
  File "/users/PAS1730/ziyaosu816/.local/lib/python3.12/site-packages/mpi4py/_mpiabi.py", line 290, in find_spec
    mpiabi_suffix = _get_mpiabi_suffix(fullname)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/users/PAS1730/ziyaosu816/.local/lib/python3.12/site-packages/mpi4py/_mpiabi.py", line 276, in _get_mpiabi_suffix
    mpiabi = _get_mpiabi()
             ^^^^^^^^^^^^^
  File "/users/PAS1730/ziyaosu816/.local/lib/python3.12/site-packages/mpi4py/_mpiabi.py", line 258, in _get_mpiabi
    mpiabi = _get_mpiabi_from_libmpi(libmpi)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/users/PAS1730/ziyaosu816/.local/lib/python3.12/site-packages/mpi4py/_mpiabi.py", line 217, in _get_mpiabi_from_libmpi
    lib = _dlopen_libmpi(libmpi)
          ^^^^^^^^^^^^^^^^^^^^^^
  File "/users/PAS1730/ziyaosu816/.local/lib/python3.12/site-packages/mpi4py/_mpiabi.py", line 210, in _dlopen_libmpi
    raise RuntimeError("\n".join(errors))
RuntimeError: cannot load MPI library
/users/PAS1730/ziyaosu816/.local/lib/libmpi.so: cannot open shared object file: No such file or directory
/users/PAS1730/ziyaosu816/.local/lib/libmpi.so.12: cannot open shared object file: No such file or directory
/users/PAS1730/ziyaosu816/.local/lib/libmpi.so.40: cannot open shared object file: No such file or directory
/apps/python/3.12/lib/libmpi.so: cannot open shared object file: No such file or directory
/apps/python/3.12/lib/libmpi.so.12: cannot open shared object file: No such file or directory
/apps/python/3.12/lib/libmpi.so.40: cannot open shared object file: No such file or directory
libmpi.so: cannot open shared object file: No such file or directory
libmpi.so.12: cannot open shared object file: No such file or directory
libmpi.so.40: cannot open shared object file: No such file or directory
